kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: dorian-nextjs
 name: dorian-db-svc
spec: 
  type: ClusterIP
  selector:
    app: dorian-db
  ports:
    - port: 80
      targetPort: 80
