kube/svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: dorian-nextjs
 name: dorian-nextjs-app-svc
spec: 
  type: ClusterIP
  selector:
    app: dorian-nextjs-app
  ports:
    - port: 80
      targetPort: 80
