kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dorian-nextjs-ingress
  namespace: dorian-nextjs
spec: 
  # ingressClassName: nginx
  rules: 
  - host: dorjs.duckdns.org
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: dorian-nextjs-app-svc
            port:
              number: 3000
